tests/models/enum/named/u8/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1.0)]
        value: u8
    },
}
fn main() {}
